--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="javascript.js"></script>
-
+  <header>
+    <img src="img/logo.jpeg">
+  </header>
 </head>
 <body>
     <!-- サイトで実際に表示される内容 -->
