--- a/index.html
+++ b/index.html
@@ -31,12 +31,60 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="javascript.js"></script>
-  <header>
-    <img src="img/logo.jpeg">
-  </header>
+
 </head>
 <body>
     <!-- サイトで実際に表示される内容 -->
-  
+    <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
+    <div class="container">
+      <div class="navbar-translate"> <a class="navbar-brand" href="#" rel="#"> Youth Speak Forum </a>
+        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-bar top-bar"></span> <span class="navbar-toggler-bar middle-bar"></span> <span class="navbar-toggler-bar bottom-bar"></span> </button>
+      </div>
+      <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="assets/img/sample_image.png">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#top" onclick="scrollToDownload()">
+              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
+              <p>TOP</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#speakers" onclick="scrollToDownload()">
+              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
+              <p>SPEAKERS</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#content" onclick="scrollToDownload()">
+              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
+              <p>CONTENT</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about" onclick="scrollToDownload()">
+              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
+              <p>ABOUT</p>
+            </a>
+          </li>
+          <!-- FormのURLを入れてください。 -->
+          <li class="nav-item"> <a class="nav-link btn btn-neutral" href="#" target="_blank"> <i class="now-ui-icons arrows-1_share-66"></i>
+          <p>APPRY</p>
+          </a> </li>
+          <!-- Twitterあれば -->
+          <li class="nav-item"> <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/aiesecjapan" target="_blank"> <i class="fab fa-twitter"></i>
+          <p class="d-lg-none d-xl-none">Twitter</p>
+          </a> </li>
+          <li class="nav-item"> <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/ysf20181009/?_rdc=2&_rdr" target="_blank"> <i class="fab fa-facebook-square"></i>
+          <p class="d-lg-none d-xl-none">Facebook</p>
+          </a> </li>
+          <!-- <li class="nav-item"> <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="#" target="_blank"> <i class="fab fa-instagram"></i>
+          <p class="d-lg-none d-xl-none">Instagram</p>
+          </a> </li> -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
 </body>
 </html>
