--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta name="robots" content="noindex, nofollow">
 
   <!-- サイトのタイトル＆説明 -->
-  <title>WEMO</title>
-  <meta name="description" content="縄跳び大好きクリエイターの学びの足跡。">
+  <title>Apple</title>
+  <meta name="description" content="革新に満ちたAppleの世界へようこそ。">
 
   <!-- faviconの指定 -->
   <link rel="icon" href="favicon.ico">
@@ -34,57 +34,71 @@
 
 </head>
 <body>
+  <header>
     <!-- サイトで実際に表示される内容 -->
-    <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
-    <div class="container">
-      <div class="navbar-translate"> <a class="navbar-brand" href="#" rel="#"> Youth Speak Forum </a>
-        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-bar top-bar"></span> <span class="navbar-toggler-bar middle-bar"></span> <span class="navbar-toggler-bar bottom-bar"></span> </button>
+   <!--  navbar come here    -->
+    <nav class="navbar navbar-expand-md fixed-top" color-on-scroll="500">
+      <div class="container">
+        <div class="navbar-translate">
+          <button class="navbar-toggler navbar-toggler-right navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-bar"></span>
+            <span class="navbar-toggler-bar"></span> <span class="navbar-toggler-bar"></span> </button>
+          <a class="navbar-brand" href="#"> <img class="nav_logo" src="img/logo.jpeg" alt="Logo"> </a> </div>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav ml-auto">
+            <!-- [todo] ここのリンクの確認も必須。 -->
+            <li class="nav-item"> <a class="nav-link" href="https://www.apple.com/jp/" target="_blank"> Japan HP </a> </li>
+            <li class="nav-item"> <a class="nav-link" href="https://www.apple.com" target="_blank"> World HP </a> </li>
+            <li class="nav-item"> <a class="nav-link" href="#PresidentComment" target="_blank"> Message </a> </li>
+            <li class="nav-item"> <a class="nav-link" href="#ChangeTheWorld" target="_blank">Interview</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="#Com" target="_blank"> Contact Us </a> </li>
+          </ul>
+        </div>
       </div>
-      <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="assets/img/sample_image.png">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#top" onclick="scrollToDownload()">
-              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
-              <p>TOP</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#speakers" onclick="scrollToDownload()">
-              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
-              <p>SPEAKERS</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#content" onclick="scrollToDownload()">
-              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
-              <p>CONTENT</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about" onclick="scrollToDownload()">
-              <!--              <i class="now-ui-icons arrows-1_cloud-download-93"></i>-->
-              <p>ABOUT</p>
-            </a>
-          </li>
-          <!-- FormのURLを入れてください。 -->
-          <li class="nav-item"> <a class="nav-link btn btn-neutral" href="#" target="_blank"> <i class="now-ui-icons arrows-1_share-66"></i>
-          <p>APPRY</p>
-          </a> </li>
-          <!-- Twitterあれば -->
-          <li class="nav-item"> <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/aiesecjapan" target="_blank"> <i class="fab fa-twitter"></i>
-          <p class="d-lg-none d-xl-none">Twitter</p>
-          </a> </li>
-          <li class="nav-item"> <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/ysf20181009/?_rdc=2&_rdr" target="_blank"> <i class="fab fa-facebook-square"></i>
-          <p class="d-lg-none d-xl-none">Facebook</p>
-          </a> </li>
-          <!-- <li class="nav-item"> <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="#" target="_blank"> <i class="fab fa-instagram"></i>
-          <p class="d-lg-none d-xl-none">Instagram</p>
-          </a> </li> -->
-        </ul>
+    </nav>
+
+    <!-- end navbar  -->
+  
+    <!--Message-->
+    <section class="top-message" id="TopMessage">
+      <div class="container">
+        <div class="message-textarea">
+          <h2 class="top-messeage-direction">気候危機</h2>
+          <p>気候危機は、もはや予測ではありません。数百万の人びとにとって、頻発し、困難で、壊滅的ですらある現実です。<br>
+            <br>
+            パタゴニアのビジネスも、あらゆる段階で関与しています。<br>
+            私たちは、二酸化炭素排出から逃れられません：石油からのポリエステル糸製造、化石燃料で稼働する機械を使った織物、化学染料を使った布の染色やジャケットの防水処理、<br>
+            工場でのシャツ縫製、ある国から別の国へ、あるいはある都市から別の都市へのパンツの輸送、注文したお客様へのプラスチック製梱包資材での衣類の配送、職場への自動車通勤。 <br>
+            </p>
+          <br>
+          <p>将来の地球を住みやすい環境に保つためには、私たちは慣習を変えなければなりません。「土地、エネルギー、産業、建物、運輸および都市における、急速かつ広範囲に及ぶ移行」に着手しなければならないと、IPCC（気候変動に関する政府間パネル）は2018年10月の報告書で述べました。<br>
+            さらに、災害のリスクを減少させるために、地球温暖化を1.5℃に抑えるための行動を迅速に起こさなければなりません。<br>
+            そのためには、人為的な二酸化炭素（CO2）排出量を、2010年の水準と比較して約45%削減し、<br>
+            排出量と同量のCO2を大気中から除去する「実質ゼロ」のCO2排出を、2050年までに達成する必要があります。<br>
+            </p>
+          <br>
+          <p>ミッションを実践する ー「私たちは、故郷である地球を救うためにビジネスを営む」 <br>
+            パタゴニアの目標は、2025年までにサプライチェーンを含む事業全体にわたってカーボン・ニュートラルになることです。 <br>
+            </p>
+          <br>
+          <p>「サプライチェーン」は、テキスタイルその他の製造業者に使用する用語で、糸を作るための作物栽培や生地を衣服にする縫製から、倉庫や店舗、あるいはお客様の玄関先への完成品輸送に至るまで、すべてのプロセスを表しています。<br>
+            パタゴニアのサプライチェーンは、私たちが排出する二酸化炭素の97%を占めています。<br>
+            「実質ゼロ」あるいは「カーボン・ニュートラル」とは、テキスタイルや衣類の完成品を作る工場や天然繊維を育てる農場から排出される分を含め、<br>
+            私たちが排出するすべての二酸化炭素を削減、回収、あるいはその他の方法で軽減している状態を意味します。 <br>
+          </p>
+          <br>
+          <br>
+          
+          <br>
+
+          <!-- <h3 class="potition-right">世界。</h3> -->
+        </div>
       </div>
+    </section>
+
+    <!--ENd of Message-->
+    <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "> </div>
+      <div class="filter"></div>
     </div>
-  </nav>
-  <!-- End Navbar -->
+  </header>
 </body>
 </html>
