--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- その他、必要なファイルの読み込みなど -->
 
-  <link rel="stylesheet.css" type="text/css" href="style.css">
+  <link rel="stylesheet" href="stylesheet.css">
   <script type="text/javascript" src="javascript.js"></script>
 
 </head>
