--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <!--ENd of Message-->
-    <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "> </div>
+    <div class="moving-clouds" style="background-image: url('img/climate-change.jpg'); "> </div>
       <div class="filter"></div>
     </div>
   </header>
