headerから作り直し

--- a/index.html
+++ b/index.html
@@ -34,24 +34,13 @@
 
 </head>
 <body>
-  <header>
+  <header class="header">
+    <!--  header come here    -->
     <!-- サイトで実際に表示される内容 -->
-   <!--  navbar come here    -->
-    <nav class="navbar navbar-expand-md fixed-top" color-on-scroll="500">
-        <div class="collapse navbar-collapse" id="navbarToggler">
-          <ul class="navbar-nav ml-auto">
-            <!-- [todo] ここのリンクの確認も必須。 -->
-            <li class="nav-item"> <a class="nav-link" href="https://www.apple.com/jp/" target="_blank"> Japan HP </a> </li>
-            <li class="nav-item"> <a class="nav-link" href="https://www.apple.com" target="_blank"> World HP </a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#PresidentComment" target="_blank"> Message </a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#ChangeTheWorld" target="_blank">Interview</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#Com" target="_blank"> Contact Us </a> </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- end navbar  -->
+    <div class="aiesec-logo">
+      <img src="">
+    </div>
+  </header>
   
     <!--Message-->
     <section class="top-message" id="TopMessage">
