--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <!--  header come here    -->
     <!-- サイトで実際に表示される内容 -->
     <div class="aiesec-logo">
-      <img src="">
+      <img src="img/Aiesec blue .png">
     </div>
+    
   </header>
   
     <!--Message-->
