--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta name="robots" content="noindex, nofollow">
 
   <!-- サイトのタイトル＆説明 -->
-  <title>Apple</title>
-  <meta name="description" content="革新に満ちたAppleの世界へようこそ。">
+  <title>AIESEC</title>
+  <meta name="description" content="We are passionately driven by one cause, peace and fulfillment of humankind's potential">
 
   <!-- faviconの指定 -->
   <link rel="icon" href="favicon.ico">
