--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@
 
   <link rel="stylesheet" href="stylesheet.css">
   <script type="text/javascript" src="javascript.js"></script>
-  <header class="header">
-    <!--  header come here    -->
-    <!-- サイトで実際に表示される内容 -->
-    <div class="aiesec-logo">
-      <img src="img/Aiesec blue .png">
-    </div>
-    
-  </header>
+  <!-- ここからヘッダー作る -->
+   <header>
+     
+   </header>
+
   
 </head>
 <body>
