write header-list

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
   
 </head>
 <body>
+  <div class="header">
+  <div class="header-logo">Patagonia</div>
+      
+      <!-- 「header-list」 -->
+      <div class="header-list">
+        <ul>
+          <li>Patagoniaとは</li>
+          <li>aaaaaaaaa</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </div>
+  </div>
 
     <!--Message-->
     <section class="top-message" id="TopMessage">
