--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
             <br>
             パタゴニアのビジネスも、あらゆる段階で関与しています。<br>
             私たちは、二酸化炭素排出から逃れられません：石油からのポリエステル糸製造、化石燃料で稼働する機械を使った織物、化学染料を使った布の染色やジャケットの防水処理、<br>
+            <br>
             工場でのシャツ縫製、ある国から別の国へ、あるいはある都市から別の都市へのパンツの輸送、注文したお客様へのプラスチック製梱包資材での衣類の配送、職場への自動車通勤。 <br>
             </p>
-          <br>
-          <p>将来の地球を住みやすい環境に保つためには、私たちは慣習を変えなければなりません。「土地、エネルギー、産業、建物、運輸および都市における、急速かつ広範囲に及ぶ移行」に着手しなければならないと、IPCC（気候変動に関する政府間パネル）は2018年10月の報告書で述べました。<br>
+          <p>将来の地球を住みやすい環境に保つためには、私たちは慣習を変えなければなりません。<br>
+            「土地、エネルギー、産業、建物、運輸および都市における、急速かつ広範囲に及ぶ移行」に着手しなければならないと、IPCC（気候変動に関する政府間パネル）は2018年10月の報告書で述べました。<br>
             さらに、災害のリスクを減少させるために、地球温暖化を1.5℃に抑えるための行動を迅速に起こさなければなりません。<br>
             そのためには、人為的な二酸化炭素（CO2）排出量を、2010年の水準と比較して約45%削減し、<br>
-            排出量と同量のCO2を大気中から除去する「実質ゼロ」のCO2排出を、2050年までに達成する必要があります。<br>
+            排出量と同量のCO2を大気中から除去する「実質ゼロ」のCO2排出を、2050年までに達成する必要があります。
             </p>
           <br>
           <p>ミッションを実践する ー「私たちは、故郷である地球を救うためにビジネスを営む」 <br>
-            パタゴニアの目標は、2025年までにサプライチェーンを含む事業全体にわたってカーボン・ニュートラルになることです。 <br>
+            パタゴニアの目標は、2025年までにサプライチェーンを含む事業全体にわたってカーボン・ニュートラルになることです。 
             </p>
           <br>
-          <p>「サプライチェーン」は、テキスタイルその他の製造業者に使用する用語で、糸を作るための作物栽培や生地を衣服にする縫製から、倉庫や店舗、あるいはお客様の玄関先への完成品輸送に至るまで、すべてのプロセスを表しています。<br>
+          <p>「サプライチェーン」は、テキスタイルその他の製造業者に使用する用語で、<br>
+            糸を作るための作物栽培や生地を衣服にする縫製から、倉庫や店舗、あるいはお客様の玄関先への完成品輸送に至るまで、すべてのプロセスを表しています。<br>
             パタゴニアのサプライチェーンは、私たちが排出する二酸化炭素の97%を占めています。<br>
-            「実質ゼロ」あるいは「カーボン・ニュートラル」とは、テキスタイルや衣類の完成品を作る工場や天然繊維を育てる農場から排出される分を含め、<br>
+            「実質ゼロ」あるいは「カーボン・ニュートラル」とは、<br>
+            テキスタイルや衣類の完成品を作る工場や天然繊維を育てる農場から排出される分を含め、<br>
             私たちが排出するすべての二酸化炭素を削減、回収、あるいはその他の方法で軽減している状態を意味します。 <br>
           </p>
           <br>
           <br>
-          
-          <br>
-
           <!-- <h3 class="potition-right">世界。</h3> -->
         </div>
       </div>
