--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             排出量と同量のCO2を大気中から除去する「実質ゼロ」のCO2排出を、2050年までに達成する必要があります。
             </p>
           <br>
-          <p>ミッションを実践する ー「私たちは、故郷である地球を救うためにビジネスを営む」 <br>
+          <p>ミッションを実践する ー<b>「私たちは、故郷である地球を救うためにビジネスを営む」</b> <br>
             パタゴニアの目標は、2025年までにサプライチェーンを含む事業全体にわたってカーボン・ニュートラルになることです。 
             </p>
           <br>
