--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
     </section>
 
     <!--ENd of Message-->
-    <div class="moving-clouds" style="background-image: url('img/climate-change.jpg'); "> </div>
-      <div class="filter"></div>
-    </div>
-  </header>
+
+  <div class="video">
+    <iframe  src="https://www.youtube.com/embed/HzeekxtyFOY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
 </body>
 </html>
